Update names files, make consent index as first page

--- a/MemoryGame/Views/Home/ConsentIndex.cshtml
+++ b/MemoryGame/Views/Home/ConsentIndex.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section scripts {
-    <script type="text/javascript" src="~/Scripts/consent.js"></script>
+    <script type="text/javascript" src="~/Scripts/JS/Consent.js"></script>
 }
 
 <link rel="stylesheet" href="~/Content/css/consent.css" />
