--- a/MemoryGame/Views/Home/DisagreePage.cshtml
+++ b/MemoryGame/Views/Home/DisagreePage.cshtml
@@ -5,7 +5,7 @@
 
 
 @section scripts {
-    <script type="text/javascript" src="~/Scripts/DisagreePage.js"></script>
+    <script type="text/javascript" src="~/Scripts/JS/DisagreePage.js"></script>
 }
 <link rel="stylesheet" href="~/Content/css/consent.css" />
 <body>
