--- a/MemoryGame/Views/Home/EndGame.cshtml
+++ b/MemoryGame/Views/Home/EndGame.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "EndGame";
 }
 @section scripts {
-    <script type="text/javascript" src="~/Scripts/EndGame.js"></script>
+    <script type="text/javascript" src="~/Scripts/JS/EndGame.js"></script>
 }
 <link rel="stylesheet" href="~/Content/css/consent.css" />
 <link rel="stylesheet" href="~/Content/css/verificationRulesCSS.css" />
