--- a/MemoryGame/Views/Home/EndPage.cshtml
+++ b/MemoryGame/Views/Home/EndPage.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "EndPage";
 }
 @section scripts {
-    <script type="text/javascript" src="~/Scripts/EndPage.js"></script>
+    <script type="text/javascript" src="~/Scripts/JS/EndPage.js"></script>
 }
 <link rel="stylesheet" href="~/Content/css/consent.css" />
 
