--- a/MemoryGame/Views/Home/Feedback.cshtml
+++ b/MemoryGame/Views/Home/Feedback.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section scripts {
-    <script type="text/javascript" src="~/Scripts/feedback.js"></script>
+    <script type="text/javascript" src="~/Scripts/JS/Feedback.js"></script>
 }
 
 
