--- a/MemoryGame/Views/Home/Game.cshtml
+++ b/MemoryGame/Views/Home/Game.cshtml
@@ -6,7 +6,7 @@
 
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script src="~/Scripts/Game.js"></script>
+<script src="~/Scripts/JS/Game.js"></script>
 <link rel="stylesheet" href="~/Content/css/game.css" />
 <body>
 
