--- a/MemoryGame/Views/Home/MobileError.cshtml
+++ b/MemoryGame/Views/Home/MobileError.cshtml
@@ -4,7 +4,7 @@
 }
 @section scripts {
     <link rel="stylesheet" href="~/Content/css/consent.css" />
-    <script src="~/Scripts/MobileError.js"></script>
+    <script src="~/Scripts/JS/MobileError.js"></script>
 }
 
 <body>
