--- a/MemoryGame/Views/Home/TooManyTries.cshtml
+++ b/MemoryGame/Views/Home/TooManyTries.cshtml
@@ -4,7 +4,7 @@
 }
 @section scripts {
     <link rel="stylesheet" href="~/Content/css/consent.css" />
-    <script src="~/Scripts/TooManyTries.js"></script>
+    <script src="~/Scripts/JS/TooManyTries.js"></script>
 }
 <body>
     <div id="div_body">
