--- a/MemoryGame/Views/Home/interfaceExample.cshtml
+++ b/MemoryGame/Views/Home/interfaceExample.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "interfaceExample";
+    ViewData["Title"] = "InterfaceExample";
 }
 <link rel="stylesheet" href="~/Content/css/consent.css" />
-<script defer src="~/Scripts/interfaceExample.js"></script>
+<script defer src="~/Scripts/JS/InterfaceExample.js"></script>
 <body>
     <div style="text-align: center;">
         <br />
