--- a/MemoryGame/Views/Home/verificationRules.cshtml
+++ b/MemoryGame/Views/Home/verificationRules.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "verificationRules";
+    ViewData["Title"] = "VerificationRules";
 }
 
 
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="~/Content/css/verificationRulesCSS.css" rel="stylesheet">
-    <script defer src="~/Scripts/verificationRulesScript.js"></script>
+    <script defer src="~/Scripts/JS/VerificationRulesScript.js"></script>
     <title>verification Rules</title>
 </head>
 <body>
