--- a/MemoryGame/Views/Home/ConsentIndex.cshtml
+++ b/MemoryGame/Views/Home/ConsentIndex.cshtml
@@ -6,12 +6,13 @@
     <script type="text/javascript" src="~/Scripts/JS/Consent.js"></script>
 }
 
-<link rel="stylesheet" href="~/Content/css/consent.css" />
-<body>
+<link rel="stylesheet" href="~/Content/css/consentIndex.css" />
+
+<!--body  style="background-image: url('/MemoryGame/resources/background.PNG')"-->
     <div id="div_body" style="text-align: center;">
         <h2>Informed Consent</h2>
 
-        <div id="Consent_Form" style="text-align: center;">
+        <div id="Consent_Form" class="text_body" style="text-align: center;">
             <p>Dear participant,</p>
             <p>Thank you for accepting this HIT. This study is being done by Prof. David Sarne and lab members from Bar-Ilan University.</p>
 
@@ -44,4 +45,4 @@
         </div>
 
     </div>
-</body>
+</!--body>
