Starting the game board

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -8,6 +8,24 @@
 <body>
     <h1 id="score"></h1>
     <div id="time"></div>
-    <div id="board1"></div>
+    <div id="board_zone">
+        <div id="board_info">
+            <div id="head_board" style="display: flex;justify-content: space-between;  ">
+                <div id="total_time"> Time:00:00
+                </div>
+                <div id="total_score">
+                    Score: 50
+                </div>
+            </div>
+            <div id="board">
+
+            </div>
+        </div>
+        <div id="agent_area">
+            <div class="player">
+                player 1
+             </div>
+        </div>
+    </div>
 </body>
 
