--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -6,12 +6,10 @@
 <script src="~/Scripts/JS/Game1.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
 <body>
-    <h1 id="score"></h1>
-    <div id="time"></div>
-    <div id="board_zone">
+    <div id="board_zone" class="board_area">
         <div id="board_info">
-            <div id="head_board" style="display: flex;justify-content: space-between;  ">
-                <div id="total_time"> Time:00:00
+            <div id="head_board" class="board_area">
+                <div id="total_time"> Time: <span id="time">00:00</span>
                 </div>
                 <div id="total_score">
                     Score: 50
@@ -23,8 +21,33 @@
         </div>
         <div id="agent_area">
             <div class="player">
-                player 1
-             </div>
+                <div class="player_name_img">
+                    <h4>Player 1</h4>
+                    <img class="player_img"src="~/resources/player1.jpg"/>
+                </div>
+                <div class="info_agent">
+                    <div class="time_agent">
+                        Time: 00:05
+                    </div>
+                    <div class="score_agent">
+                        Score: 20
+                    </div>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player_name_img">
+                    <h4>Player 2</h4>
+                    <img class="player_img" src="~/resources/player1.jpg" />
+                </div>
+                <div class="info_agent">
+                    <div class="time_agent">
+                        Time: 00:05
+                    </div>
+                    <div class="score_agent">
+                        Score: 20
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
