--- a/MemoryGame/Content/css/game1.css
+++ b/MemoryGame/Content/css/game1.css
@@ -19,7 +19,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     border-style: dotted;
-    background-color: aquamarine;
+    background-color:cadetblue;
     width: 115px;
     height: 115px;
 }
