start of agents

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -6,49 +6,49 @@
 <script src="~/Scripts/JS/Game1.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
 <body>
-    <div id="board_zone" class="board_area">
-        <div id="board_info">
-            <div id="head_board" class="board_area">
-                <div id="total_time"> Time: <span id="time">00:00</span>
-                </div>
-                <div id="total_score">
-                    Score: 50
-                </div>
+<div id="board_zone" class="board_area">
+    <div id="board_info">
+        <div id="head_board" class="board_area">
+            <div id="total_time"> Time: <span id="time">00:00</span>
             </div>
-            <div id="board">
-
+            <div id="total_score">
+                Score: 50
             </div>
+                
         </div>
-        <div id="agent_area">
-            <div class="player">
-                <div class="player_name_img">
-                    <h4>Player 1</h4>
-                    <img class="player_img"src="~/resources/player1.jpg"/>
-                </div>
-                <div class="info_agent">
-                    <div class="time_agent">
-                        Time: 00:05
-                    </div>
-                    <div class="score_agent">
-                        Score: 20
-                    </div>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player_name_img">
-                    <h4>Player 2</h4>
-                    <img class="player_img" src="~/resources/player1.jpg" />
-                </div>
-                <div class="info_agent">
-                    <div class="time_agent">
-                        Time: 00:05
-                    </div>
-                    <div class="score_agent">
-                        Score: 20
-                    </div>
-                </div>
-            </div>
+        <div id="board">
+
         </div>
     </div>
+    <div id="agent_area">
+        <div class="player">
+            <div class="player_name_img">
+                <h4>Player 1</h4>
+                <img class="player_img"src="~/resources/player1.jpg"/>
+            </div>
+            <div class="info_agent">
+                <div class="time_agent">
+                    Time: 00:05
+                </div>
+                <div class="score_agent">
+                    Score: 20
+                </div>
+            </div>
+        </div>
+        <!--<div class="player">
+            <div class="player_name_img">
+                <h4>Player 2</h4>
+                <img class="player_img" src="~/resources/player1.jpg" />
+            </div>
+            <div class="info_agent">
+                <div class="time_agent">
+                    Time: 00:05
+                </div>
+                <div class="score_agent">
+                    Score: 20
+                </div>
+            </div>
+        </div>-->
+    </div>
+</div>
 </body>
-
