--- a/MemoryGame/Content/css/game1.css
+++ b/MemoryGame/Content/css/game1.css
@@ -48,9 +48,15 @@ h1 {
     width: 70px;
     height: 70px;
 }
-
 #board {
     background-color:lightgrey;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+#memoryTable {
+    background-color:darkgrey;
     margin-left: auto;
     margin-right: auto;
     margin-top:auto;
