Fixing names of agent and the color of the current player

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -23,7 +23,7 @@
     <div id="agent_area">
         <div class="player">
             <div class="player_name_img">
-                <h4>Player 1</h4>
+                <h4 id="name_of_player">Player</h4>
                 <img class="player_img"src="~/resources/player1.jpg"/>
             </div>
             <div class="info_agent">
