--- a/MemoryGame/Views/Home/ConsentIndex.cshtml
+++ b/MemoryGame/Views/Home/ConsentIndex.cshtml
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="~/Content/css/consentIndex.css" />
 
-<!--body  style="background-image: url('/MemoryGame/resources/background.PNG')"-->
+<body>
     <div id="div_body" style="text-align: center;">
         <h2>Informed Consent</h2>
 
@@ -45,3 +45,4 @@
         </div>
 
     </div>
+</body>
