--- a/MemoryGame/Views/Home/InstructionsOne.cshtml
+++ b/MemoryGame/Views/Home/InstructionsOne.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/InstructionsOne.js"></script>
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
+<link rel="stylesheet" href="~/Content/css/consentIndex.css" />
 
 
 <body>
@@ -18,13 +18,10 @@
         Instructions – 1/2
     </h3>
 
-    <div class="Running_Text">
-        Welcome! <br>
-        In this HIT, you will play a well-known word-search puzzle game, and then answer feedback questions.
-    </div>
 
-    <img id="Img_Example" src="~/Resources/tableExample.png" alt="Italian Trulli">
-    <div class="Running_Text">
+    <div class="text_body">
+        Welcome! <br>
+        In this HIT, you will play a well-known word-search puzzle game, and then answer feedback questions.<br>
         Please note that after clicking the "Continue" button, it will not be possible to start the HIT
         from the beginning.<br>
         To avoid potential problems, please do NOT click the refresh button nor the
