אובייקטים לפי הדרישה של דודי.. הולך לעשות הרבה שינויים בjs אז דברו איתי לפני שעושים משהו..

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -5,6 +5,7 @@
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <script src="~/Scripts/JS/Agent.js"></script>
 <script src="~/Scripts/JS/Game1.js"></script>
+<script src="~/Scripts/JS/Board.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
 <body>
 <div id="board_zone" class="board_area">
