--- a/MemoryGame/Views/Home/InstructionsOne.cshtml
+++ b/MemoryGame/Views/Home/InstructionsOne.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/InstructionsOne.js"></script>
 }
-<link rel="stylesheet" href="~/Content/css/consentIndex.css" />
+<link rel="stylesheet" href="~/Content/css/instruction1.css" />
 
 
 <body>
@@ -20,18 +20,18 @@
 
 
     <div class="text_body">
-        Welcome! <br>
-        In this HIT, you will play a well-known word-search puzzle game, and then answer feedback questions.<br>
-        Please note that after clicking the "Continue" button, it will not be possible to start the HIT
-        from the beginning.<br>
-        To avoid potential problems, please do NOT click the refresh button nor the
-        back button while working on this HIT.<br>
-        Also, please do not open the HIT in another tab/window.
+        <h4>Welcome!</h4>
+        <p> this HIT, you will play a well-known Memory Game, and then answer feedback questions.</p>
+        <p> Please note that after clicking the "Continue" button, it will not be possible to start the HIT
+        from the beginning.</p>
+        <p> To avoid potential problems, please do NOT click the refresh button nor the
+            back button while working on this HIT. </p>
+        <p>Also, please do not open the HIT in another tab/window.</p>
 
     </div>
 
-    <div class="Center">
-        <button class="Continue_Button" type="submit" onclick="NextPage(); return false;">Continue</button>
+    <div class="clickers">
+        <button class="Green_Button" type="submit" onclick="NextPage(); return false;">Continue</button>
     </div>
 
 </body>
