--- a/MemoryGame/Content/css/instruction1.css
+++ b/MemoryGame/Content/css/instruction1.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     background-color: aliceblue;
     background-size: cover;
 }
@@ -30,9 +31,6 @@ h3 {
     margin-right: 15%;
 }
 
-.container.Container_Space_Evenly {
-    margin-top: 50px;
-}
 
 .Green_Button {
     display: inline-block;
@@ -56,26 +54,7 @@ h3 {
         background-color: #79d279;
     }
 
-
-.Red_Button {
-    display: inline-block;
+.clickers {
     text-align: center;
-    vertical-align: middle;
-    border: none;
-    width: 120px;
-    height: 50px;
-    border-radius: 8px;
-    transition: color .20s ease-in-out, background-color .20s ease-in-out, border-color .20s ease-in-out, box-shadow .20s ease-in-out;
-    background-color: #ea5353;
-    margin-left: 20px;
-    color: white;
+    margin-top: 50px;
 }
-
-    .Red_Button:focus {
-        outline: none;
-    }
-
-    .Red_Button:hover {
-        background-color: #f35e5e;
-    }
-
