finished verificationRules CSS page

--- a/MemoryGame/Views/Home/interfaceExample.cshtml
+++ b/MemoryGame/Views/Home/interfaceExample.cshtml
@@ -2,19 +2,19 @@
 @{
     ViewData["Title"] = "InterfaceExample";
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
+<link rel="stylesheet" href="~/Content/css/interfaceExample.css" />
 <script defer src="~/Scripts/JS/InterfaceExample.js"></script>
 <body>
     <div style="text-align: center;">
         <br />
-        <h4 style="text-align: center;">
+        <h3 style="text-align: center;">
             Here is what your interface will look like:
-        </h4>
+        </h3>
         <img src="~/Resources/boardExample3.png" alt="Italian Trulli" width="800" height="500">
         <br />
         <br />
-        <div class="Center">
-            <button id="agree_button_id" type="submit" class="Continue_Button" onclick="nextPage(); return false;">Continue</button>
+        <div class="clickers">
+            <button id="agree_button_id" type="submit" class="Green_Button" onclick="nextPage(); return false;">Continue</button>
         </div>
 
     </div>
