--- a/MemoryGame/Views/Home/InstructionsTwo.cshtml
+++ b/MemoryGame/Views/Home/InstructionsTwo.cshtml
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="~/Content/css/instruction2.css" />
 <body>
     <h2>
-        Word Search Game
+        Memory Game
     </h2>
     <h3>
         Instructions – 2/2
