1.Turns object and saving turns objects on board turnsArray 2.scores updating

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -3,18 +3,19 @@
     ViewBag.Title = "Game1";
 }
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
-<script src="~/Scripts/JS/Agent.js"></script>
-<script src="~/Scripts/JS/Game1.js"></script>
 <script src="~/Scripts/JS/Board.js"></script>
+<script src="~/Scripts/JS/Agent.js"></script>
+<script src="~/Scripts/JS/Turn.js"></script>
+<script src="~/Scripts/JS/Game1.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
 <body>
 <div id="board_zone" class="board_area">
     <div id="board_info">
         <div id="head_board" class="board_area">
-            <div id="total_time"> Time: <span id="time">00:00</span>
+            <div id="total_time"> Time: <span id="total_time_text">00:00</span>
             </div>
             <div id="total_score">
-                Score: 0
+                Score: <span id="total_score_text">0</span>
             </div>
                 
         </div>
@@ -30,10 +31,10 @@
             </div>
             <div class="info_agent">
                 <div class="time_agent">
-                    Time: 00:05
+                    Time: <span id="time_text">00:05</span>
                 </div>
                 <div class="score_agent">
-                    Score: 0
+                    Score: <span id="score_text"></span>
                 </div>
             </div>
         </div>
