all the last pages of the flow css done.

--- a/MemoryGame/Views/Home/DisagreePage.cshtml
+++ b/MemoryGame/Views/Home/DisagreePage.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/DisagreePage.js"></script>
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
+<link rel="stylesheet" href="~/Content/css/endings.css" />
 <body>
     <div id="div_body">
 
@@ -21,7 +21,7 @@
             </p>
         </div>
     </div>
-    <div class="Center">
+    <div class="clickers">
         <button class="Green_Button" type="submit" onclick="Agree(); return false;" style="height:auto">Return to Amazon</button>
     </div>
 </body>
