--- a/MemoryGame/Views/Home/TooManyTries.cshtml
+++ b/MemoryGame/Views/Home/TooManyTries.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "TooManyTries";
 }
 @section scripts {
-    <link rel="stylesheet" href="~/Content/css/consent.css" />
+    <link rel="stylesheet" href="~/Content/css/endings.css" />
     <script src="~/Scripts/JS/TooManyTries.js"></script>
 }
 <body>
@@ -18,7 +18,7 @@
                 Please return the HIT.
             </p>
         </div>
-        <div class="Center">
+        <div class="clickers">
             <button class="Green_Button" type="submit" onclick="returnToAmazon(); return false;" style="height:auto">Return to Amazon</button>
         </div>
     </div>
