--- a/MemoryGame/Views/Home/EndPage.cshtml
+++ b/MemoryGame/Views/Home/EndPage.cshtml
@@ -5,7 +5,7 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/EndPage.js"></script>
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
+<link rel="stylesheet" href="~/Content/css/endings.css" />
 
 <body>
     <div>
@@ -27,7 +27,7 @@
 
 
         </div>
-        <div class="Center">
+        <div class="clickers">
             <button id="agree_button_id" type="submit" class="Green_Button" style="height:auto" onclick="Submit(); return false;">Submit assignment</button>
         </div>
     </div>
