--- a/MemoryGame/Views/Home/ErrorPage.cshtml
+++ b/MemoryGame/Views/Home/ErrorPage.cshtml
@@ -2,18 +2,21 @@
 @{
     ViewData["Title"] = "ErrorPage";
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
+<link rel="stylesheet" href="~/Content/css/endings.css" />
 <body>
     <div id="div_body">
 
 
-        <div id="Consent_Form" class="h2">
+        <div id="Consent_Form">
             <p>
                 Sorry, something went wrong.
             </p>
             <p>
                 Please contact the HIT requester.
             </p>
+        </div>
+        <div class="clickers">
+            <button id="agree_button_id" type="submit" class="Green_Button" style="height:auto" onclick="Submit(); return false;">Submit assignment</button>
         </div>
     </div>
 
