--- a/MemoryGame/Views/Home/SecondTimeError.cshtml
+++ b/MemoryGame/Views/Home/SecondTimeError.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "SecondTimeError";
 }
 @section scripts {
-    <link rel="stylesheet" href="~/Content/css/consent.css" />
+    <link rel="stylesheet" href="~/Content/css/endings.css" />
     <script src="~/Scripts/JS/SecondTimeError.js"></script>
 }
 
@@ -19,7 +19,7 @@
                 We will be happy to see you in our other next HITs.
             </p>
         </div>
-        <div class="Center">
+        <div class="clickers">
             <button class="Green_Button" type="submit" onclick="returnToAmazon(); return false;" style="height:auto">Return to Amazon</button>
         </div>
     </div>
