--- a/MemoryGame/Content/css/feedback.css
+++ b/MemoryGame/Content/css/feedback.css
@@ -5,8 +5,7 @@
 
 h4 {
     text-align: center;
-    color: #002966;
-    font-size: 23px;
+    font-size: 20px;
     font-weight: bold;
     font-family: Georgia;
     margin-bottom: 40px;
@@ -15,7 +14,6 @@ h4 {
 
 h5 {
     text-align: center;
-    color: #002966;
     font-size: 18px;
     font-weight: bold;
     font-family: Georgia;
@@ -27,32 +25,35 @@ h5 {
     margin-top: 50px;
 }
 
+.question {
+    margin-top:10px;
+    margin-bottom: 10px;
+}
+
 .QA {
-    margin: 50px;
+    margin: 10px;
+    padding: 10px;
     border: 2px solid black;
     background-color: rgb(51 82 134 / 55%);
     border-radius: 8px;
 }
 
 .likert {
-    height:180px
+    height: 100px;
+    margin:10px;
 }
 
 .likert_opt {
-    height: 160px;
+    height: 100px;
     width:60px;
     vertical-align: text-top;
-    margin-top:10px;
-    margin-right:10px;
-    margin-left:10px;
 }
 
 .text_input {
-    width: 800px;
-    height: 100px;
-    text-align: center;
-
-    
+    margin:10px;
+    width: 80%;
+    height: 80px;
+    text-align: center
 }
 
 .clickers {
