--- a/MemoryGame/Content/css/consentIndex.css
+++ b/MemoryGame/Content/css/consentIndex.css
@@ -22,6 +22,14 @@ h3 {
     margin-bottom: 40px;
 }
 
+p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Georgia;
+    margin-bottom: 20px;
+}
+
 .text_body {
     text-align: center;
     font-weight: 600;
