--- a/MemoryGame/Content/css/instruction1.css
+++ b/MemoryGame/Content/css/instruction1.css
@@ -23,6 +23,25 @@ h3 {
     margin-bottom: 40px;
 }
 
+
+h4 {
+    text-align: center;
+    color: #002966;
+    font-size: 23px;
+    font-weight: bold;
+    font-family: Georgia;
+    margin-bottom: 40px;
+}
+
+
+p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Georgia;
+    margin-bottom: 20px;
+}
+
 .text_body {
     text-align: center;
     font-weight: 600;
