--- a/MemoryGame/Content/css/instruction2.css
+++ b/MemoryGame/Content/css/instruction2.css
@@ -23,6 +23,15 @@ h3 {
     margin-bottom: 40px;
 }
 
+
+p {
+    text-align: left;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Georgia;
+    margin-bottom: 20px;
+}
+
 .text_body {
     text-align: left;
     font-weight: 600;
