show_and_hide() on continue button relevant pages

--- a/MemoryGame/Content/css/personalDetails.css
+++ b/MemoryGame/Content/css/personalDetails.css
@@ -46,6 +46,8 @@ h5 {
     border: 2px solid black;
     border-radius: 8px;
     background-color: beige;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 
