--- a/MemoryGame/Views/Home/PersonalDetails.cshtml
+++ b/MemoryGame/Views/Home/PersonalDetails.cshtml
@@ -338,7 +338,7 @@
 
             </div>
 
-            <button type="submit" class="Green_Button" name="personalInfo" id="cont_str_info_id" onclick="SubmitAnswers(); return false;">Continue</button>
+            <button type="submit" class="Green_Button" name="personalInfo" style="display:inline-block;" id="cont_str_info_id" onclick="SubmitAnswers(); return false;">Continue</button>
         </div>
 
     </div>
