--- a/MemoryGame/Views/Home/verificationRules.cshtml
+++ b/MemoryGame/Views/Home/verificationRules.cshtml
@@ -31,7 +31,7 @@
                 <button id="failed_button" onclick="anotherTry();" class="Red_Button">Please try again</button>
                 <h5>You can not continue right now, click on "Please Try Again"</h5>
             </div>
-            <button id="continue-btn" style="text-align:center" class="Green_Button">Continue</button>
+            <button id="continue-btn" style="text-align: center; display: inline-block;" class="Green_Button">Continue</button>
         </div>
         
     
