--- a/MemoryGame/Views/Home/PersonalDetails.cshtml
+++ b/MemoryGame/Views/Home/PersonalDetails.cshtml
@@ -319,7 +319,7 @@
             <h3> Please confirm that you are not a robot by answering the following questions. </h3>
 
             <h5>What is written below? (case-sensitive. No spaces needed)</h5>
-            <input type="text" class="Input" id="cap_id" />
+            <textarea type="text" class="Input" id="cap_id" placeholder = "Answer here"></textarea>
 
             <p style="text-align:center;">
                 <img src="~/Resources/images/capatche.png" height="80">
@@ -327,7 +327,7 @@
 
 
             <h5>How many minutes are there in three hours?</h5>
-            <input type="text" class="Input" id="minutes_id" />
+            <textarea type="text" class="Input" id="minutes_id" placeholder = "Answer here"></textarea>
         </div>
         
         <div class="clickers">
