--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -4,8 +4,9 @@
 }
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <script src="~/Scripts/JS/Board.js"></script>
+<script src="~/Scripts/JS/Handlers.js"></script>
 <script src="~/Scripts/JS/Agent.js"></script>
-<script src="~/Scripts/JS/Turn.js"></script>\
+<script src="~/Scripts/JS/Turn.js"></script>
 <script src="~/Scripts/JS/GameManager.js"></script>
 <script src="~/Scripts/JS/Game2.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
