Update score and time in the UI. make the data for the server in the end of the game

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -33,10 +33,10 @@
             </div>
             <div class="info_agent">
                 <div class="time_agent">
-                    Time: <span id="time_text">00:05</span>
+                    Time: <span id="time_text">00:00</span>
                 </div>
                 <div class="score_agent">
-                    Score: <span id="score_text"></span>
+                    Score: <span id="score_text">0</span>
                 </div>
             </div>
         </div>
