--- a/MemoryGame/Views/Home/EndGame.cshtml
+++ b/MemoryGame/Views/Home/EndGame.cshtml
@@ -5,39 +5,48 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/EndGame.js"></script>
 }
-<link rel="stylesheet" href="~/Content/css/consent.css" />
-<link rel="stylesheet" href="~/Content/css/verificationRulesCSS.css" />
+<link rel="stylesheet" href="~/Content/css/consentIndex.css" />
+<link rel="stylesheet" href="~/Content/css/verificationRules.css" />
+<link rel="stylesheet" href="~/Content/css/game1.css">
 
 <body>
-    <div id="InfoDiv" class="Justify_Content">
-
-        <div>
-            <img class="Img_Player" src="~/Resources/HumenPic.jpg" />
-            <h3>You</h3>
-            <h3 id="globalTimerPlayer"></h3>
+    <div id="InfoDiv" class="Justify_Content" style="justify-content:space-evenly">
+         <div style="display:block; float:left">
+            <img style=" width: 300px;height:250px;align-items: center;margin-top: 10px; margin-bottom: 10px;" src="~/resources/Images/Done.png" />
+            <div id="textDiv">
+                <p>
+                    You and the agents have successfully solved <span id="numOfBoardEach"></span> boards each.
+                </p>
+                <p>
+                    To continue, please copy the time it took for each of you:
+                </p>
+                <div id="question_area">
+                    <div class="agent" style="display:inline-flex">
+                            <span id="name" style="margin-left:5%">Me:</span>
+                            <div>
+                                 <p><input type="text" class="css-input"/> minutes</p>
+                                <p><input type="text" class="css-input" /> points</p>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div>
-            <img class="Img_Player" src="~/Resources/HumenPic.jpg" />
-            <h3>Bob</h3>
-            <h3 id="globalTimerBot"></h3>
+        <div id="agent_area" style="float:right">
+            <div class="player">
+                <div class="player_name_img">
+                    <h4 id="name_of_player">Player</h4>
+                    <img class="player_img" src="~/resources/player1.jpg" />
+                </div>
+                <div class="info_agent">
+                    <div class="time_agent">
+                        Time: <span id="time_text">00:00</span>
+                    </div>
+                    <div class="score_agent">
+                        Score: <span id="score_text">0</span>
+                    </div>
+                </div>
+            </div>
         </div>
-
-    </div>
-    <img style=" width: 300px;height:250px;align-items: center;margin-top: 10px; margin-bottom: 10px;" src="~/Resources/Done.png" />
-    <div id="textDiv">
-        <p>
-            You and Bob have successfully solved <span id="numOfBoardEach"></span> boards each.
-        </p>
-        <p>
-            To continue, please copy the time it took for each of you:
-        </p>
-        <p>
-            Me: <input type="text" class="css-input" id="PlayerMinutes" /> minutes
-        </p>
-        <p>
-            Bob: <input type="text" class="css-input" id="BobMinutes" /> minutes
-        </p>
     </div>
     <div class="failed" style="margin-top: 50px ;position:initial;display:none;" id="failed">
         <h4>Some of your answers were incorrect</h4>
