1. fixing the append problem, that the card showed up next to it's td, instead of inside it. 2. added a hint, when click on the hint button there is an if cond that brings the controll tho GetHint in gameManager.

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -19,7 +19,7 @@
             <div id="total_score">
                 Score: <span id="total_score_text">0</span>
             </div>
-                
+            <button id="hint">hint</button>   
         </div>
         <div id="board">
 
