--- a/MemoryGame/Views/Home/Replay.cshtml
+++ b/MemoryGame/Views/Home/Replay.cshtml
@@ -8,7 +8,7 @@
 <script src="~/Scripts/JS/Agent.js"></script>
 <script src="~/Scripts/JS/Turn.js"></script>
 <script src="~/Scripts/JS/GameManager.js"></script>
-<script src="~/Scripts/JS/Game2.js"></script>
+<script src="~/Scripts/JS/Replay.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
 <body>
 <div id="board_zone" class="board_area">
