--- a/MemoryGame/Content/css/verificationRules.css
+++ b/MemoryGame/Content/css/verificationRules.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     background-color: aliceblue;
     background-size: cover;
 
@@ -106,4 +107,4 @@ h5 {
     .Red_Button:hover {
         background-color: #f35e5e;
     }
-
+    
