like dislike buttum

--- a/MemoryGame/Views/Home/verificationRules.cshtml
+++ b/MemoryGame/Views/Home/verificationRules.cshtml
@@ -19,9 +19,9 @@
             <div id="question-container" class="question_container">
 
             </div>
-            <div>
-                <img id="img_board" src="~/Resources/boardExample3.png" alt="Italian Trulli">
-            </div>
+       <!-- <div>
+        <img id="img_board" src="~/Resources/boardExample3.png" alt="Italian Trulli">
+            </div> -->
         </div>
 
         <div class="clickers" style="text-align:center">
