--- a/MemoryGame/Content/css/feedback.css
+++ b/MemoryGame/Content/css/feedback.css
@@ -39,8 +39,9 @@ h5 {
 }
 
 .likert {
-    height: 100px;
-    margin:10px;
+    height: 120px;
+    margin: 10px;
+    display: block;
 }
 
 .likert_opt {
@@ -81,3 +82,31 @@ h5 {
     .Green_Button:hover {
         background-color: #79d279;
     }
+
+
+.like_dislike {
+    block-size: inherit;
+    color: red;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: right;
+    width:100px;
+    height:100px;
+    
+}
+
+.like {
+    width: 70px;
+    color:green;
+    font-weight:bold;
+    font-size:16px;
+    text-align:right;
+}
+
+.dislike {
+    width: 70px;
+    color: red;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: right;
+}
