redesigned game view. ** cards show outside of card box borders. ** replay is done right after finished game - itay did it on porpuse we need to change it. ** implement second hint(by dudi)

--- a/MemoryGame/Views/Home/Game1.cshtml
+++ b/MemoryGame/Views/Home/Game1.cshtml
@@ -10,36 +10,40 @@
 <script src="~/Scripts/JS/GameManager.js"></script>
 <script src="~/Scripts/JS/Game2.js"></script>
 <link rel="stylesheet" href="~/Content/css/game1.css" />
-<body>
-<div id="board_zone" class="board_area">
-    <div id="board_info">
-        <div id="head_board" class="board_area">
-            <div id="total_time"> Time: <span id="total_time_text">00:00</span>
-            </div>
-            <div id="total_score">
-                Score: <span id="total_score_text">0</span>
-            </div>
-            <button id="hint">hint</button>   
-        </div>
-        <div id="board">
 
-        </div>
+<body>
+    <div class="headline">
+        <h2>Memory Game</h2>
     </div>
-    <div id="agent_area">
-        <div class="player">
-            <div class="player_name_img">
-                <h4 id="name_of_player">Player</h4>
-                <img class="player_img"src="~/resources/player1.jpg"/>
-            </div>
-            <div class="info_agent">
-                <div class="time_agent">
-                    Time: <span id="time_text">00:00</span>
+    <div id="board_zone" class="board_area">
+        <div id="board_info">
+            <div id="head_board" class="board_area">
+                <div class="text" id="total_time"> Time: <span id="total_time_text">00:00</span>
                 </div>
-                <div class="score_agent">
-                    Score: <span id="score_text">0</span>
+                <div class="text" id="total_score">
+                    Score: <span id="total_score_text">0</span>
+                </div>
+                <button class="text" id="hint">hint</button>   
+            </div>
+            <div id="board">
+
+            </div>
+        </div>
+        <div class="text" id="agent_area">
+            <div class="player">
+                <div class="player_name_img">
+                    <h4 id="name_of_player">Player</h4>
+                    <img class="player_img"src="~/resources/player1.jpg"/>
+                </div>
+                <div class="info_agent">
+                    <div class="time_agent">
+                        Time: <span id="time_text">00:00</span>
+                    </div>
+                    <div class="score_agent">
+                        Score: <span id="score_text">0</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
 </body>
