--- a/MemoryGame/Content/css/game1.css
+++ b/MemoryGame/Content/css/game1.css
@@ -1,5 +1,6 @@
-﻿body {
-    background-color:lightgrey;
+﻿
+body {
+    background-color: aliceblue;
 }
 h1 {
     font-family: verdana;
@@ -9,60 +10,109 @@ h1 {
     margin-bottom: auto;
 }
 
+.headline {
+    text-align: center;
+    margin-top: 20px;
+    margin-right: 150px;
+}
+h2 {
+    color: #002966;
+    font-size: 28px;
+    font-weight: bold;
+    font-family: Georgia;
+}
+
+.text {
+    font-weight: bold;
+}
+
+
 #cardFrame {
     border-style: solid;
     width: 120px;
     height: 120px;
+
 }
+
+#board {
+    margin:20px;
+}
+
 .board_area{
-    margin: 10px;
+    margin: 20px;
     display:flex;
     justify-content:space-evenly;
 }
 .player {
-    background-color:darkgrey;
-    display:flex;
-    justify-content:space-evenly;
+    border: 2px ridge black;
+    background-color: rgb(164 179 241 / 55%);
+    display: flex;
+    justify-content: space-evenly;
+    padding:4px;
 }
+.player_name_img {
+    padding:10px;
+}
+
 .player_img {
     max-block-size:100px;
     height:auto;
     width:auto;
+
 }
-.info_agent{
-    display:grid;
-    margin-top:15%;
+.info_agent {
+    display: grid;
+    margin-top: 15%;
+    padding:5px;
+    border: 2px ridge black;
+    border-radius: 8px;
 }
-#board_info{
-    background-color:darkgrey;
-    height:fit-content;
-    padding:20px;
-    margin-right:1%;
-    width:75%;
+#board_info {
+    background-color: rgb(164 179 241 / 55%);
+    height: 100%;
+    padding: 5px;
+    margin-right: 1%;
+    width: 75%;
+    border: 2px ridge black;
+    border-radius: 8px;
 }
 #card {
     margin-left: auto;
     margin-right: auto;
     border-style: dotted;
-    background-color: aquamarine;
+    background-color: rgb(33 55 128 / 90%);
     width: 70px;
     height: 70px;
+    margin: 2px;
 }
 #board {
-    background-color:lightgrey;
     margin-left: auto;
     margin-right: auto;
     margin-top:auto;
     margin-bottom:auto;
 }
 #memoryTable {
-    background-color:darkgrey;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:auto;
-    margin-bottom:auto;
+    background-color: aliceblue;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 2px ridge black;
+    border-radius: 8px;
 }
 #agent_area {
     padding:10px;
-   box-shadow: inset 0 0 0 10px darkgrey;
+    background-color: rgb(164 179 241 / 55%);
+    box-shadow: inset 0 0 0 10px darkgrey;
+}
+
+.card_spec {
+    margin: 20px;
+}
+
+#head_board {
+    background-color: rgb(89 109 183 / 0.5);
+    padding: 15px;
+    border: 2px solid black;
+    box-shadow: black 10px 10px 10px;
 }
