--- a/MemoryGame/Views/Home/Replay.cshtml
+++ b/MemoryGame/Views/Home/Replay.cshtml
@@ -23,7 +23,9 @@
                 <div class="text" id="total_score">
                     Score: <span id="total_score_text">0</span>
                 </div>
-                <button class="text" id="hint">hint</button>
+                <div id="hint_button">
+                    <button class="text" id="hint">Hint!</button>
+                </div>
             </div>
             <div id="board">
 
