--- a/MemoryGame/Content/css/game1.css
+++ b/MemoryGame/Content/css/game1.css
@@ -111,6 +111,14 @@ h2 {
     border: 2px ridge black;
 }
 
+#card:hover, #card:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+    transform: translateY(-0.5em);
+    box-shadow: black 5px 5px 10px 1px;
+    border: 2px ridge black;
+}
+
+
 #board {
     margin-left: auto;
     margin-right: auto;
