table is done. to do: 1. add replay button 2. redirect to replay

--- a/MemoryGame/Views/Admin/ChooseReplay.cshtml
+++ b/MemoryGame/Views/Admin/ChooseReplay.cshtml
@@ -7,11 +7,14 @@
     <script type="text/javascript" src="~/Scripts/JS/chooseReplay.js"></script>
 }
 
+<link rel="stylesheet" href="~/Content/css/chooseReplay.css" />
+<link rel="stylesheet" href="~/Content/css/login.css" />
+
 
 <body>
 
     <div>
-        hii
+        <h2> Choose a Replay to RUN!</h2>
     </div>
 
 
