--- a/MemoryGame/Views/Home/EndGame.cshtml
+++ b/MemoryGame/Views/Home/EndGame.cshtml
@@ -6,12 +6,13 @@
     <script type="text/javascript" src="~/Scripts/JS/EndGame.js"></script>
 }
 <link rel="stylesheet" href="~/Content/css/consentIndex.css" />
-<link rel="stylesheet" href="~/Content/css/verificationRules.css" />
 <link rel="stylesheet" href="~/Content/css/game1.css">
+<link rel="stylesheet" href="~/Content/css/endGame.css">
+
 
 <body>
-    <div id="InfoDiv" class="Justify_Content" style="justify-content:space-evenly">
-         <div style="display:block; float:left">
+    <div id="InfoDiv">
+        <div class="dataArea" style="display:block; float:left">
             <img style=" width: 300px;height:250px;align-items: center;margin-top: 10px; margin-bottom: 10px;" src="~/resources/Images/Done.png" />
             <div id="textDiv">
                 <p>
@@ -21,12 +22,12 @@
                     To continue, please copy the time it took for each of you:
                 </p>
                 <div id="question_area">
-                    <div class="agent" style="display:inline-flex">
-                            <span id="name" style="margin-left:5%">Me:</span>
-                            <div>
-                                 <p><input type="text" class="css-input"/> minutes</p>
-                                <p><input type="text" class="css-input" /> points</p>
-                            </div>
+                    <div class="agent">
+                        <span class="name_text" id="name">Me:</span>
+                        <div class="data_text">
+                            <p><input type="text" class="css-input" /> minutes</p>
+                            <p><input type="text" class="css-input" /> points</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,11 +49,19 @@
             </div>
         </div>
     </div>
-    <div class="failed" style="margin-top: 50px ;position:initial;display:none;" id="failed">
-        <h4>Some of your answers were incorrect</h4>
-        <button id="failed_button" onclick="anotherTry();" class="filed_button">Please try again</button>
-    </div>
+    <div class="clickers" style="text-align:center">
+        <div class="failed" id="failed">
+            <div class="content" style="display:none;">
+                <h4>Some of your answers were incorrect</h4>
+                <button id="failed_button" onclick="anotherTry();" class="Red_Button">Please try again</button>
+            </div>
 
-    <button id="agree_button_id" type="submit" class="Green_Button" style="background-color:#4ef18f" onclick="checkAns(); return false;">Submit</button>
+        </div>
+        <div class="green">
+            <button id="agree_button_id" type="submit" class="Green_Button" onclick="checkAns(); return false;">Submit</button>
+        </div>
+
+    </div>
+    
 </body>
 
