--- a/MemoryGame/Views/Home/EndGame.cshtml
+++ b/MemoryGame/Views/Home/EndGame.cshtml
@@ -50,8 +50,8 @@
         </div>
     </div>
     <div class="clickers" style="text-align:center">
-        <div class="failed" id="failed">
-            <div class="content" style="display:none;">
+        <div class="failed" id="failed" style="display:none;">
+            <div class="content">
                 <h4>Some of your answers were incorrect</h4>
                 <button id="failed_button" onclick="anotherTry();" class="Red_Button">Please try again</button>
             </div>
