--- a/MemoryGame/Views/Admin/login.cshtml
+++ b/MemoryGame/Views/Admin/login.cshtml
@@ -14,11 +14,11 @@
     <div class="container">
         <h2> Login Page </h2>
         <div class="uname">
-            <label for="uname"><b>Username</b></label>
+            <label for="uname"><b>Username:</b></label>
             <input id="userName" type="text" placeholder="Enter Username" name="uname" required>
         </div>
         <div class="psw">
-            <label for="psw"><b>Password</b></label>
+            <label for="psw"><b>Password:</b></label>
             <input id="password" type="password" placeholder="Enter Password" name="psw" required>
         </div>
 
