--- a/MemoryGame/Content/css/login.css
+++ b/MemoryGame/Content/css/login.css
@@ -1,12 +1,11 @@
 ﻿h2 {
-    color: whitesmoke;
-    margin-top:10px;
-    font-size:40px;
-    font-weight:600;
+    color: rgb(33 55 128 / 90%);
+    margin-top: 10px;
+    font-size: 40px;
+    font-weight: 600;
 }
 
 body {
-    border: 5px solid black;
     border-radius: 8px;
     text-align: center;
     background-color: rgb(33 55 128 / 90%);
@@ -16,10 +15,10 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.psw,.uname {
+.psw, .uname {
     margin: 10%;
-    color:white;
-    font-weight:400;
+    color: rgb(33 55 128 / 90%);
+    font-weight: 400;
 }
 
 
@@ -52,3 +51,11 @@ label {
         background-color: #73bf72;
     }
 
+.container {
+    background: #fdfdfd;
+}
+
+input {
+    text-align:center;
+    border: 2px solid black;
+}
